[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Sprites/DialogueWindow.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Pokemon.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]

[node name="Menu" type="NinePatchRect"]
margin_right = 88.0
margin_bottom = 130.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 6
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 12.0
margin_top = -8.0
margin_right = 36.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 3 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 12, 16 )
texture = ExtResource( 1 )

[node name="Content" type="GridContainer" parent="."]
margin_left = 19.0
margin_top = 7.0
margin_right = 84.0
margin_bottom = 123.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 65.0
margin_bottom = 4.0

[node name="Pokedex" type="TextureButton" parent="Content"]
margin_top = 4.0
margin_right = 65.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Pokedex" type="Label" parent="Content/Pokedex"]
margin_right = 44.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " POKEDEX"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 16.0
margin_right = 65.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon" type="TextureButton" parent="Content"]
margin_top = 20.0
margin_right = 65.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Pokemon" type="Label" parent="Content/Pokemon"]
margin_right = 33.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " POKEMON"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 32.0
margin_right = 65.0
margin_bottom = 36.0

[node name="Bag" type="TextureButton" parent="Content"]
margin_top = 36.0
margin_right = 65.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Bag" type="Label" parent="Content/Bag"]
margin_right = 33.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " BAG"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator4" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 48.0
margin_right = 65.0
margin_bottom = 52.0

[node name="Player" type="TextureButton" parent="Content"]
margin_top = 52.0
margin_right = 65.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Player" type="Label" parent="Content/Player"]
margin_right = 33.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " PLAYER"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator5" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 65.0
margin_bottom = 68.0

[node name="Save" type="TextureButton" parent="Content"]
margin_top = 68.0
margin_right = 65.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Save" type="Label" parent="Content/Save"]
margin_right = 33.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " SAVE"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator6" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 80.0
margin_right = 65.0
margin_bottom = 84.0

[node name="Option" type="TextureButton" parent="Content"]
margin_top = 84.0
margin_right = 65.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Option" type="Label" parent="Content/Option"]
margin_right = 33.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " OPTION"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator7" type="HSeparator" parent="Content"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 96.0
margin_right = 65.0
margin_bottom = 100.0

[node name="Exit" type="TextureButton" parent="Content"]
margin_top = 100.0
margin_right = 65.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="Exit" type="Label" parent="Content/Exit"]
margin_right = 33.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " EXIT"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="Content/Pokedex" to="." method="_on_Pokedex_focus_entered"]
[connection signal="focus_entered" from="Content/Pokemon" to="." method="_on_Pokemon_focus_entered"]
[connection signal="focus_entered" from="Content/Bag" to="." method="_on_Bag_focus_entered"]
[connection signal="focus_entered" from="Content/Player" to="." method="_on_Player_focus_entered"]
[connection signal="focus_entered" from="Content/Save" to="." method="_on_Save_focus_entered"]
[connection signal="focus_entered" from="Content/Option" to="." method="_on_Option_focus_entered"]
[connection signal="focus_entered" from="Content/Exit" to="." method="_on_Exit_focus_entered"]
